updated bootstrap plot with many resample

--- a/10-inference.Rmd
+++ b/10-inference.Rmd
@@ -657,9 +657,8 @@ population mean value, as we learned in
 the previous section. However, the bootstrap distribution is centred at \$`r round(mean(boot15000_means$mean), 2)`, which 
 is the original sample's mean price per night. This is because we are resampling from the original sample over and
 over again, so we see that the bootstrap distribution is centred at the
-original sample's mean value. The second important point is that the shape and spread of the true sampling distribution
-and the bootstrap distribution is similar; the bootstrap distribution lets us get a sense for the variability of the 
-point estimate.
+original sample's mean value (unlike the sampling distribution of the sample mean which is centred at the population parameter value). The second important point is that the shape and spread of the true sampling distribution
+and the bootstrap distribution is similar; the bootstrap distribution lets us get a sense for the variability of the point estimate.
 
 ```{r 11-bootstrapping7, echo = F, message = FALSE, warning = FALSE, fig.cap = "Summary of bootstrapping process"}
 pop_dist <- population_distribution + ggtitle("Population") + xlab("Price") +
@@ -729,7 +728,7 @@ grid.arrange(pop_dist,
   layout_matrix = rbind(c(1, NA, 3, NA, 6),
                         c(1, 2, 4, NA, 6),
                         c(NA, NA, 5, NA, NA)
-)) 
+))  
 grid.text(paste("mean =", round(mean(boot1$price)), sep = " "), x = unit(0.7, "npc"), 
           y = unit(.8, "npc"),gp = gpar(fontsize=12))
 grid.text(paste("mean =", round(mean(boot2$price)), sep = " "), x = unit(0.7, "npc"), 
@@ -755,19 +754,24 @@ mygb(x=c(0.77,0.77,0.83,0.83), y=c(0.5,0.5,0.6,0.6))
 mygb(x=c(0.77,0.77,0.83,0.83), y=c(0.2,0.2,0.4,0.4))
 
 # dots 
- grid.text(".", x = unit(0.45, "npc"), 
-           y = unit(0.04, "npc"),gp = gpar(fontsize=15))
- grid.text(".", x = unit(0.45, "npc"), 
-           y = unit(0.06, "npc"),gp = gpar(fontsize=15))
- grid.text(".", x = unit(0.45, "npc"), 
-           y = unit(0.025, "npc"),gp = gpar(fontsize=15))
- 
- grid.text(".", x = unit(0.7, "npc"), 
-           y = unit(0.14, "npc"),gp = gpar(fontsize=15))
- grid.text(".", x = unit(0.7, "npc"), 
-           y = unit(0.16, "npc"),gp = gpar(fontsize=15))
- grid.text(".", x = unit(0.7, "npc"), 
-           y = unit(0.18, "npc"),gp = gpar(fontsize=15))
+mygb(x=c(0.35,0.35,0.45,0.45), y=c(0.4,0.4,0.01,0.01))
+  grid.text("many more resamples", x = unit(0.45, "npc"), 
+            y = unit(0.01, "npc"),gp = gpar(fontsize=10))
+  
+mygb(x=c(0.35,0.35,0.7,0.7), y=c(0.4,0.4,0.01,0.01))
+  grid.text("many more means", x = unit(0.45, "npc"), 
+            y = unit(0.01, "npc"),gp = gpar(fontsize=10))
+ # grid.text(".", x = unit(0.45, "npc"), 
+ #           y = unit(0.06, "npc"),gp = gpar(fontsize=15))
+ # grid.text(".", x = unit(0.45, "npc"), 
+ #           y = unit(0.025, "npc"),gp = gpar(fontsize=15))
+ # 
+ # grid.text(".", x = unit(0.7, "npc"), 
+ #           y = unit(0.14, "npc"),gp = gpar(fontsize=15))
+ # grid.text(".", x = unit(0.7, "npc"), 
+ #           y = unit(0.16, "npc"),gp = gpar(fontsize=15))
+ # grid.text(".", x = unit(0.7, "npc"), 
+ #           y = unit(0.18, "npc"),gp = gpar(fontsize=15))
 
 ```
 
@@ -812,4 +816,4 @@ population.
 ## Additional readings
 
 For more about statistical inference and bootstrapping, refer to Chapters 7 - 8 of [Modern Dive](https://moderndive.com/) Statistical 
-Inference via Data Science by Chester Ismay and Albert Y. Kim.
+Inference via Data Science by Chester Ismay and Albert Y. Kim or Chapters 4 - 7 of [OpenIntro Statistics - Fourth Edition](https://www.openintro.org/) by David M. Diez, Christopher D. Barr and Mine Cetinkaya-Rundel.
