--- a/10-inference.Rmd
+++ b/10-inference.Rmd
@@ -439,6 +439,7 @@ in a more reliable point estimate of the population parameter.
 4. The spread of the sampling distribution is related to the sample size. As the sample size increases, the spread of the sampling distribution decreases. 
 5. The shape of the sampling distribution is usually bell-shaped with one peak and centred at the population mean or proportion.
 
+#### Why all this emphasis on sampling distributions? 
 Usually, we don't have access to the population data, so we cannot construct the sampling distribution as we did in this section. As we saw, our sample estimate's value will likely not equal the population parameter value exactly. We saw from the sampling distribution just how much our estimates can vary. So reporting a single *point estimate* for the population parameter alone may not be enough. Using simulations, we can see patterns of the sample statistic's sampling distribution would look like for a sample of a given size. We can use these patterns to approximate the sampling distribution when we only have one sample, which is the realistic case. If we can ``predict" what the sampling distribution would look like for a sample, we could construct a range of values we think the population parameter's value might lie. We can use our single sample and its properties that influence sampling distributions, such as the spread and sample size, to approximate the sampling distribution as best as we can. There are several methods to do this; however, in this book, we will use the bootstrap method to do this, as we will see in the next section.
 
 ## Bootstrapping 
@@ -651,14 +652,10 @@ grid.arrange(sampling_dist + xlim(min_x(sampling_dist), max_x(sampling_dist)) + 
              annotated_boot_est_dist + xlim(min_x(sampling_dist), max_x(boot_est_dist)) + ggtitle("Bootstrap distribution"),
              ncol = 2)
 ```
-There are two important points that we can take away from these plots.
-First, we see how the sampling distribution is centred at \$`r round(mean(airbnb$price),2)`, the 
-population mean value, as we learned in
-the previous section. However, the bootstrap distribution is centred at \$`r round(mean(boot15000_means$mean), 2)`, which 
-is the original sample's mean price per night. This is because we are resampling from the original sample over and
-over again, so we see that the bootstrap distribution is centred at the
-original sample's mean value (unlike the sampling distribution of the sample mean which is centred at the population parameter value). The second important point is that the shape and spread of the true sampling distribution
-and the bootstrap distribution is similar; the bootstrap distribution lets us get a sense for the variability of the point estimate.
+
+There are two essential points that we can take away from these plots. First, the shape and spread of the true sampling distribution and the bootstrap distribution are similar; the bootstrap distribution lets us get a sense of the point estimate's variability. The second important point is that the means of these two distributions are different. The sampling distribution is centred at \$`r round(mean(airbnb$price),2)`, the population mean value. However, the bootstrap distribution is centred at the original sample's mean price per night, \$`r round(mean(boot15000_means$mean), 2)`. Because we are resampling from the original sample repeatedly, we see that the bootstrap distribution is centred at the original sample's mean value (unlike the sampling distribution of the sample mean, which is centred at the population parameter value). 
+
+The idea here is that we can use this distribution of bootstrap sample means to approximate the sampling distribution of the sample means when we only have one sample. Since the bootstrap distribution pretty well approximates the sampling distribution spread, we can use the bootstrap spread to help us develop a plausible range for our population parameter along with our estimate!
 
 ```{r 11-bootstrapping7, echo = F, message = FALSE, warning = FALSE, fig.cap = "Summary of bootstrapping process"}
 pop_dist <- population_distribution + ggtitle("Population") + xlab("Price") +
@@ -700,7 +697,7 @@ boot2_dist <- ggplot(boot2, aes(price)) +
         axis.text.y = element_blank())
 
 boot3_dist <- ggplot(boot3, aes(price)) + 
-    geom_histogram(fill="dodgerblue3", color="lightgrey") + xlab("Price") +
+    geom_histogram(fill="dodgerblue3", color="lightgrey") + xlab("") +
   theme(axis.ticks.x = element_blank(),
         axis.text.x = element_blank(), 
         axis.title.y =element_blank(), 
@@ -728,7 +725,8 @@ grid.arrange(pop_dist,
   layout_matrix = rbind(c(1, NA, 3, NA, 6),
                         c(1, 2, 4, NA, 6),
                         c(NA, NA, 5, NA, NA)
-))  
+))
+
 grid.text(paste("mean =", round(mean(boot1$price)), sep = " "), x = unit(0.7, "npc"), 
           y = unit(.8, "npc"),gp = gpar(fontsize=12))
 grid.text(paste("mean =", round(mean(boot2$price)), sep = " "), x = unit(0.7, "npc"), 
@@ -742,25 +740,27 @@ mygb(x=c(0.15,0.3,0.3,0.3), y=c(0.8,0.8,0.65,0.65))
 mygb(x=c(0.35,0.35,0.42,0.42), y=c(0.55,0.55,0.8,0.8))
 mygb(x=c(0.35,0.35,0.42,0.42), y=c(0.5,0.5,0.5,0.5))
 mygb(x=c(0.35,0.35,0.42,0.42), y=c(0.45,0.45,0.2,0.2))
+mygb(x=c(0.35,0.35,0.42,0.42), y=c(0.4,0.4,0.025,0.025))
 
 # arrows: resamples to statistics
 mygb(x=c(0.57,0.57,0.62,0.62), y=c(0.8,0.8,0.8,0.8))
 mygb(x=c(0.57,0.57,0.62,0.62), y=c(0.5,0.5,0.5,0.5))
 mygb(x=c(0.57,0.57,0.62,0.62), y=c(0.2,0.2,0.2,0.2))
+mygb(x=c(0.57,0.57,0.62,0.62), y=c(0.02,0.02,0.02,0.02))
 
 # arrows: statistics to boot
 mygb(x=c(0.77,0.77,0.83,0.83), y=c(0.8,0.8,0.7,0.7))
 mygb(x=c(0.77,0.77,0.83,0.83), y=c(0.5,0.5,0.6,0.6))
 mygb(x=c(0.77,0.77,0.83,0.83), y=c(0.2,0.2,0.4,0.4))
+mygb(x=c(0.77,0.77,0.85,0.85), y=c(0.02,0.02,0.33,0.33))
 
-# dots 
-mygb(x=c(0.35,0.35,0.45,0.45), y=c(0.4,0.4,0.01,0.01))
-  grid.text("many more resamples", x = unit(0.45, "npc"), 
-            y = unit(0.01, "npc"),gp = gpar(fontsize=10))
+# many resamples 
+grid.text("many resamples...", x = unit(0.487, "npc"), 
+            y = unit(0.02, "npc"), gp = gpar(fontsize=10))
   
-mygb(x=c(0.35,0.35,0.7,0.7), y=c(0.4,0.4,0.01,0.01))
-  grid.text("many more means", x = unit(0.45, "npc"), 
-            y = unit(0.01, "npc"),gp = gpar(fontsize=10))
+# arrow to many more means 
+grid.text("many means...", x = unit(0.7, "npc"), 
+            y = unit(0.02, "npc"),gp = gpar(fontsize=10))
  # grid.text(".", x = unit(0.45, "npc"), 
  #           y = unit(0.06, "npc"),gp = gpar(fontsize=15))
  # grid.text(".", x = unit(0.45, "npc"), 
@@ -777,8 +777,7 @@ mygb(x=c(0.35,0.35,0.7,0.7), y=c(0.4,0.4,0.01,0.01))
 
 ### Using the bootstrap to calculate a plausible range  
 
-Now that we have constructed our bootstrap distribution let's use it to create
-an approximate bootstrap confidence interval, a range of plausible values for the population mean. We will construct a 95\% percentile bootstrap confidence interval and find the range of values that cover the middle 95\% of the bootstrap distribution. Note that there's nothing particularly special about 95\%, we could have used other confidence levels, such as 90\% or 99\%. The confidence level you choose will depend on your application, which is beyond the scope of this textbook.
+Now that we have constructed our bootstrap distribution let's use it to create an approximate bootstrap confidence interval, a range of plausible values for the population mean. We will build a 95\% percentile bootstrap confidence interval and find the range of values that cover the middle 95\% of the bootstrap distribution. A 95\% confidence interval means that if we were to repeat the sampling process and calculate 95\% confidence intervals each time and repeat this process many times, then 95\% of the intervals would capture the population parameter's value. Note that there's nothing particularly special about 95\%, we could have used other confidence levels, such as 90\% or 99\%. There is a balance between our level of confidence and precision. A higher confidence level corresponds to a wider range of the interval, and a lower confidence level corresponds to a narrower range. Therefore the level we choose is based on what chance we are willing to take of being wrong based on the implications of being wrong for our application. In general, we choose confidence levels to be comfortable with our level of uncertainty, but not so strict that the interval is unhelpful. For instance, if our decision impacts human life and the implications of being wrong are deadly, we may want to be very confident and choose a higher confidence level.
 
 To calculate our 95\% percentile bootstrap confidence interval, we will do the following:
 
@@ -807,13 +806,17 @@ boot_est_dist +
            label = paste("97.5th percentile =", round(bounds[2], 2)))
 ```
 
-Here we notice that our interval does indeed contain the true
+To finish our estimation of the population parameter, we would report the point estimate and our confidence interval's lower and upper bounds. Here the sample mean price-per-night of 40 Airbnb listings was \$`r round(mean(sample_1$price),2)`, and we are 95\% "confident" that the true population mean price-per-night for all Airbnb listings in Vancouver is between \$`r round(bounds[1],2)`, \$`r round(bounds[2],2)`).
+
+Notice that our interval does indeed contain the true
 population mean value, \$`r round(mean(airbnb$price),2)`\! However, in
-practice, we would not know whether our interval captured the true population
-parameter or not because we usually only have a single sample, not the entire
-population.
+practice, we would not know whether our interval captured the population parameter or not because we usually only have a single sample, not the entire population. However, this is the best we can do when we only have one sample!
+
+This chapter is only the beginning of the journey into statistical inference. We can extend the concepts learned here to do much more than report point estimates and confidence intervals, such as hypothesis testing for differences between populations, tests for associations between variables, and so much more! We have just scratched the surface of statistical inference; however, the material presented here will serve as the foundation for more advanced statistical techniques you may learn about in the future!
 
 ## Additional readings
 
-For more about statistical inference and bootstrapping, refer to Chapters 7 - 8 of [Modern Dive](https://moderndive.com/) Statistical 
-Inference via Data Science by Chester Ismay and Albert Y. Kim or Chapters 4 - 7 of [OpenIntro Statistics - Fourth Edition](https://www.openintro.org/) by David M. Diez, Christopher D. Barr and Mine Cetinkaya-Rundel.
+For more about statistical inference and bootstrapping, refer to 
+- Chapters 7 - 8 of [Modern Dive](https://moderndive.com/) Statistical 
+Inference via Data Science by Chester Ismay and Albert Y. Kim 
+- Chapters 4 - 7 of [OpenIntro Statistics - Fourth Edition](https://www.openintro.org/) by David M. Diez, Christopher D. Barr and Mine Cetinkaya-Rundel
