added bootstrap image to the introduction

--- a/10-inference.Rmd
+++ b/10-inference.Rmd
@@ -522,6 +522,9 @@ For a sample of size $n$, the process we will go through is as follows:
 6. Repeat steps (1) - (5) many times to create a distribution of point estimates (the bootstrap distribution)
 7. Calculate the plausible range of values around our observed point estimate
 
+```{r 11-intro-bootstrap-image, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "Bootstrap process", fig.retina = 2, out.width="60%"}
+knitr::include_graphics("img/intro-bootstrap.svg")
+```
 ### Bootstrapping in R 
 Let's continue working with our Airbnb data. Once again,  let's say we are interested
 in estimating the population mean price per night of all Airbnb listings in
@@ -554,7 +557,7 @@ mean of the sample is \$`r round(one_sample_estimates$sample_mean,2)`.
 Remember, in practice, we usually only have one sample from the population. So
 this sample and estimate are the only data we can work with.
 
-We now perform steps 1 - 5 listed above to generate a single bootstrap sample in R using the
+We now perform steps (1) - (5) listed above to generate a single bootstrap sample in R using the
 sample we just took, and calculate the bootstrap estimate for that sample. We
 will use the `rep_sample_n` function as we did when we were creating our
 sampling distribution. Since we want to sample with replacement, we change the
@@ -626,7 +629,7 @@ boot_est_dist <-  ggplot(boot15000_means, aes(x = mean)) +
 
 Let's compare our bootstrap distribution with the true sampling distribution (taking many samples from the population). 
 
-```{r 11-bootstrapping6, echo = F, message = FALSE, warning = FALSE, fig.cap = "Comparison of distribution of the bootstrap sample means and sampling distribution"}
+```{r 11-bootstrapping6, echo = F, message = FALSE, warning = FALSE, fig.cap = "Comparison of distribution of the bootstrap sample means and sampling distribution", out.height="60%"}
 
 samples <- rep_sample_n(airbnb, size = 40, reps = 15000)
 
