removed my-section tags

--- a/03-viz.Rmd
+++ b/03-viz.Rmd
@@ -39,7 +39,7 @@ are external references that contain a wealth of additional information on the t
 - Use `ggsave` to save visualizations in `.png` and `.svg` format
 
 ## Choosing the visualization
-#### *Ask a question, and answer it* {-#my-section}
+#### *Ask a question, and answer it*
 
 The purpose of a visualization is to answer a question about a data set of interest. So naturally, the first thing to do **before** creating 
 a visualization is to formulate the question about the data that you are trying to answer. 
@@ -68,7 +68,7 @@ again typically a better alternative.
 
 
 ## Refining the visualization
-#### *Convey the message, minimize noise* {-#my-section}
+#### *Convey the message, minimize noise*
 
 Just being able to make a visualization in R with `ggplot2` (or any other tool for that matter) doesn't mean that it is effective at communicating 
 your message to others. Once you have selected a broad type of visualization to use, you will have to refine it to suit your particular need.
@@ -98,7 +98,7 @@ making it easier for them to quickly understand and remember your message.
 
 
 ## Creating visualizations with `ggplot2` 
-#### *Build the visualization iteratively* {-#my-section}
+#### *Build the visualization iteratively*
 
 This section will cover examples of how to choose and refine a visualization given a data set and a question that you want to answer, 
 and then how to create the visualization in R using `ggplot2`. To use the `ggplot2` library, we need to load the `tidyverse` metapackage.
@@ -379,7 +379,7 @@ admirable job given the technology available at the time period.
 
 
 ## Explaining the visualization
-#### *Tell a story* {-#my-section}
+#### *Tell a story*
 
 Typically, your visualization will not be shown completely on its own, but rather it will be part of a larger presentation.
 Further, visualizations can provide supporting information for any part of a presentation, from opening to conclusion.
@@ -425,7 +425,7 @@ worth further investigation into the differences between these experiments to se
 
 
 ## Saving the visualization
-#### *Choose the right output format for your needs* {-#my-section}
+#### *Choose the right output format for your needs*
 
 Just as there are many ways to store data sets, there are many ways to store visualizations and images.
 Which one you choose can depend on a number of factors, such as file size/type limitations 
