--- a/01-reading.Rmd
+++ b/01-reading.Rmd
@@ -2,13 +2,7 @@
 
 ## Overview 
 
-In this chapter, you'll learn to read spreadsheet-like data of various formats into R from your local device and from the web. 
-"Reading" (or "loading") is the process of converting data (stored as plain text, a database, HTML, etc.) into an object (e.g., a dataframe)
-that R can easily access and manipulate, and is thus the gateway to any data analysis; you won't be able to analyze 
-data unless you've loaded it first. And because there are many ways to store data, there are similarly many ways to read data into R. 
-If you spend more time upfront matching the  data reading method to the type of data you have, 
-you will have to spend less time re-formatting, cleaning and wrangling your data (the second step to all data analyses). 
-It's like making sure your shoelaces are tied well before going for a run so that you don't trip later on!
+In this chapter, you’ll learn to read spreadsheet-like data of various formats into R from your local device and the web. “Reading” (or “loading”) is the process of converting data (stored as plain text, a database, HTML, etc.) into an object (e.g., a data frame) that R can easily access and manipulate. Thus reading data is the gateway to any data analysis; you won’t be able to analyze data unless you’ve loaded it first. And because there are many ways to store data, there are similarly many ways to read data into R. The more time you spend upfront matching the data reading method to the type of data you have, the less time you will have to devote to re-formatting, cleaning and wrangling your data (the second step to all data analyses). It’s like making sure your shoelaces are tied well before going for a run so that you don’t trip later on!
 
 ## Chapter learning objectives
 By the end of the chapter, students will be able to:
@@ -54,7 +48,9 @@ Suppose our computer's filesystem looks like the picture below, and we are worki
 read in the `.csv` file named `happiness_report.csv` into our Jupyter notebook using R, we could do this using either a relative or an absolute path. 
 We show what both choices below.
 
-<img src="img/file-system-for-export-to-intro-datascience.svg" width="840">
+```{r 11-population-vs-sample, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "Example file system", fig.retina = 2, out.width="840"}
+knitr::include_graphics("img/file-system-for-export-to-intro-datascience.svg")
+```
 
 **Reading `happiness_report.csv` using a relative path:**
 
@@ -101,22 +97,23 @@ Last chapter we learned about using the `tidyverse` `read_csv` function when rea
 files do not satisfy the default expectations of `read_csv`. 
 
 Before we jump into the cases where the data aren't in the expected default format for `tidyverse` and `read_csv`, let's revisit the simpler
-case where the defaults hold and the only argument we need to give to the function is the path to the file, `data/state_property_vote.csv`. 
-We put `data/` before the name of the file when we are loading the dataset because this dataset is located in a sub-folder, named `data`, 
+case where the defaults hold and the only argument we need to give to the function is the path to the file, `data/can_lang.csv`. 
+We put `data/` before the name of the file when we are loading the data set because this data set is located in a sub-folder, named `data`, 
 relative to where we are running our R code.
 
 Here is what the file would look in a plain text editor:
 
 ```{bash, echo=FALSE, comment=NA}
-head -n 10 data/state_property_vote.csv
+head -n 10 data/can_lang.csv
 ```
 
 And here is a review of how we can use `read_csv` to load it into R:
 
 ```{r load data, warning=FALSE, message=FALSE}
 library(tidyverse)
-us_data <- read_csv("data/state_property_vote.csv")
-us_data
+
+canlang_data <- read_csv("data/can_lang.csv")
+canlang_data
 ```
 
 ### Skipping rows when reading in data
@@ -124,39 +121,39 @@ us_data
 Often times information about how data was collected, or other relevant information, is included at the top of the data file. This information is usually written in sentence and paragraph form, with no delimiter because it is not organized into columns. An example of this is shown below:
 
 ```{bash, echo=FALSE, comment=NA}
-head -n 13 data/state_property_vote_meta-data.csv
+head -n 13 data/can_lang_meta-data.csv
 ```
 
 Using `read_csv` as we did previously does not allow us to correctly load the data into R. In the case of this file we end up only reading in one column of the data set:
 
 ```{r}
-us_data <- read_csv("data/state_property_vote_meta-data.csv")
-us_data
+canlang_data <- read_csv("data/can_lang_meta-data.csv")
+canlang_data
 ```
 
 To successfully read data like this into R, the `skip` argument can be useful to tell R how many lines to skip before it should start reading in the data. In the example above, we would set this value to 3:
 
 ```{r}
-us_data <- read_csv("data/state_property_vote_meta-data.csv", skip = 3)
-us_data
+canlang_data <- read_csv("data/can_lang_meta-data.csv", skip = 3)
+canlang_data
 ```
 
 ### `read_delim` as a more flexible method to get tabular data into R
 
-When our tabular data comes in a different format, we can use the `read_delim` function instead. For example, a different version of this same dataset has no column names and uses tabs as the delimiter instead of commas. 
+When our tabular data comes in a different format, we can use the `read_delim` function instead. For example, a different version of this same data set has no column names and uses tabs as the delimiter instead of commas. 
 
 Here is how the file would look in a plain text editor:
 
 ```{bash, echo=FALSE, comment=NA}
-head -n 10 data/state_property_vote.tsv
+head -n 10 data/can_lang.tsv
 ```
 
 To get this into R using the `read_delim()` function, we specify the first argument as the path to the file (as done with `read_csv`), and then provide values to the `delim` argument (here a tab, which we represent by `"\t"`) and the `col_names` argument (here we specify that there are no column names be assigning it the value of `FALSE`). Both `read_csv()` and `read_delim()` have a `col_names` argument and the default is `TRUE`. 
 
 
 ```{r}
-us_data <- read_delim("data/state_property_vote.tsv",  delim = "\t", col_names = FALSE)
-us_data
+canlang_data <- read_delim("data/can_lang.tsv",  delim = "\t", col_names = FALSE)
+canlang_data
 ```
 
 Data frames in R need to have column names, thus if you read data into R as a data frame without column names then R assigns column names for them. If you used the `read_*` functions to read the data into R, then R gives each column a name of X1, X2, ..., XN, where N is the number of columns in the data set.
@@ -165,8 +162,8 @@ Data frames in R need to have column names, thus if you read data into R as a da
 We can also use `read_csv()` or `read_delim()` (and related functions) to read in tabular data directly from a url that contains tabular data. In this case, we provide the url to `read_csv()` as the path to the file instead of a path to a local file on our computer. Similar to when we specify a path on our local computer, here we need to surround the url by quotes. All other arguments that we use are the same as when using these functions with a local file on our computer.
 
 ```{r}
-us_data <- read_csv("https://raw.githubusercontent.com/UBC-DSCI/introduction-to-datascience/master/data/state_property_vote.csv")
-us_data
+canlang_data <- read_csv("https://raw.githubusercontent.com/UBC-DSCI/introduction-to-datascience/master/data/can_lang.csv")
+canlang_data
 ```
 
 ### Previewing a data file before reading it into R
@@ -180,7 +177,7 @@ on the file's name in the Jupyter home menu. We demonstrate this in the video be
 
 ## Reading data from an Microsoft Excel file
 
-There are many other ways to store tabular datasets beyond plain text files, and similarly many ways to load those datasets into R. For example, it is very common to encounter,
+There are many other ways to store tabular data sets beyond plain text files, and similarly many ways to load those data sets into R. For example, it is very common to encounter,
 and need to load into R, data stored as a Microsoft Excel spreadsheet (with the filename extension `.xlsx`). 
 To be able to do this, a key thing to know is that even though `.csv` and `.xlsx` files look almost 
 identical when loaded into Excel, the data themselves are stored completely differently.
@@ -227,8 +224,8 @@ specifically for this purpose.
 
 ```{r}
 library(readxl)
-us_data <- read_excel("data/state_property_vote.xlsx")
-us_data
+canlang_data <- read_excel("data/can_lang.xlsx")
+canlang_data
 ```
 
 If the `.xlsx` file has multiple sheets, then you have to use the `sheet` argument to specify either the sheet number or name. You can also specify cell ranges using the `range` argument. This is useful in cases where a single sheet contains multiple tables (a sad thing that happens to many Excel spreadsheets).
@@ -252,13 +249,13 @@ The first thing you need to do to read data into R from a database is to connect
 
 ```{r}
 library(DBI)
-con_state_data <- dbConnect(RSQLite::SQLite(), "data/state_property_vote.db")
+con_lang_data <- dbConnect(RSQLite::SQLite(), "data/can_lang.db")
 ```
 
 Often times relational databases have many tables, and their power comes from the useful ways they can be joined. Thus anytime you want to access data from a relational database you need to know the table names. You can get the names of all the tables in the database using the `dbListTables` function:
 
 ```{r}
-tables <- dbListTables(con_state_data)
+tables <- dbListTables(con_lang_data)
 tables
 ```
 
@@ -266,25 +263,25 @@ We only get one table name returned form calling `dbListTables`, and this tells 
 
 ```{r}
 library(dbplyr)
-state_db <- tbl(con_state_data, "state")
-state_db
+lang_db <- tbl(con_lang_data, "lang")
+lang_db
 ```
 
 Although it looks like we just got a data frame from the database, we didn't! It's a *reference*, showing us data that is still in the SQLite database (note the first two lines of the output). 
-It does this because databases are often more efficient at selecting, filtering and joining large datasets than R. And typically, the database will not even be 
+It does this because databases are often more efficient at selecting, filtering and joining large data sets than R. And typically, the database will not even be 
 stored on your computer, but rather a more powerful machine somewhere on the web. So R is lazy and waits to bring this data into memory until you explicitly tell 
 it to do so using the `collect` function from the `dbplyr` library.
 
-Here we will filter for only states that voted for the Republican candidate in the 2016 Presidential election, and then use `collect` to finally bring this data into R as a data frame. 
+Here we will filter for only the Aboriginal languages category according to the 2016 Canada Census, and then use `collect` to finally bring this data into R as a data frame. 
 
 ```{r}
-republican_db <- filter(state_db, party == "Republican")
-republican_db
+aboriginal_lang_db <- filter(lang_db, category == "Aboriginal languages")
+aboriginal_lang_db
 ```
 
 ```{r}
-republican_data <- collect(republican_db)
-republican_data
+aboriginal_lang_data <- collect(aboriginal_lang_db)
+aboriginal_lang_data
 ```
 
 Why bother to use the `collect` function? The data looks pretty similar in both outputs shown above. And `dbplyr` provides lots of functions similar to `filter` that 
@@ -293,13 +290,13 @@ linear regression modeling). However, this does not
 work in *every* case; look what happens when we try to use `nrow` to count rows in a data frame:
 
 ```{r}
-nrow(republican_db)
+nrow(aboriginal_lang_db)
 ```
  
 or `tail` to preview the last 6 rows of a data frame:
 
 ```
-tail(republican_db)
+tail(aboriginal_lang_db)
 ```
 ```
 ## Error: tail() is not supported by sql sources
@@ -422,12 +419,11 @@ We see the lowest rating given to a movie is 1, indicating that it must have bee
 
 At the middle and end of a data analysis, we often want to write a data frame that has changed (either through filtering, selecting, mutating or summarizing) to a file 
 so that we can share it with others or use it for another step in the analysis. The most straightforward way to do this is to use the `write_csv` function from the `tidyverse` library. 
-The default arguments for this file are to use a comma (`,`) as the delimiter and include column names. Below we demonstrate creating a new version of the US state-level 
-property, income, population and voting data from 2015 and 2016 that does not contain the territory of Puerto Rico, and then writing this to a `.csv` file:
+The default arguments for this file are to use a comma (`,`) as the delimiter and include column names. Below we demonstrate creating a new version of the Canadian languages data without the official languages category according to the Canadian 2016 Census, and then writing this to a `.csv` file:
 
 ```
-state_data <- filter(us_data, state != "Puerto Rico")
-write_csv(state_data, "data/us_states_only.csv")
+no_official_lang_data <- filter(can_lang, category != "Official languages")
+write_csv(no_official_lang_data, "data/no_official_lang.csv")
 ```
 
 ## Scraping data off the web using R
