minor grammar edits

--- a/01-reading.Rmd
+++ b/01-reading.Rmd
@@ -36,17 +36,17 @@ By the end of the chapter, students will be able to:
 
 ## Absolute and relative file paths
 
-When you load a data set into R, you first need to tell R where that files lives. The file could live on your 
-computer (*local*), or somewhere on the internet (*remote*). In this section we will discuss the case where the file lives on your computer.
+When you load a data set into R, you first need to tell R where those files live. The file could live on your 
+computer (*local*) or somewhere on the internet (*remote*). In this section, we will discuss the case where the file lives on your computer.
 
 The place where the file lives on your computer is called the "path". You can think of the path as directions to the file. There are two kinds of 
-paths: relative paths and absolute paths. A relative path is where the file is in respect to where you currently are on the computer (e.g., where the 
+paths: relative paths and absolute paths. A relative path is where the file is with respect to where you currently are on the computer (e.g., where the 
 Jupyter notebook file that you're working in is). On the other hand, an absolute path is where the file is in respect to the base (or root) folder of 
 the computer's filesystem.
 
 Suppose our computer's filesystem looks like the picture below, and we are working in the Jupyter notebook titled `worksheetk_02.ipynb`. If we want to 
 read in the `.csv` file named `happiness_report.csv` into our Jupyter notebook using R, we could do this using either a relative or an absolute path. 
-We show what both choices below.
+We show both choices below.
 
 ```{r 11-population-vs-sample, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "Example file system", fig.retina = 2, out.width="840"}
 knitr::include_graphics("img/file-system-for-export-to-intro-datascience.svg")
@@ -91,9 +91,9 @@ See this video for another explanation:
 
 ## Reading tabular data from a plain text file into R
 
-Now we will learn more about reading tabular data from a plain text file  into R, as well as how to write tabular data to a file. 
-Last chapter we learned about using the `tidyverse` `read_csv` function when reading files that match that functions expected defaults 
-(column names are present and commas are used as the delimiter/separator between columns). In this section, we will learn how to read 
+Now we will learn more about reading tabular data from a plain text file into R, as well as how to write tabular data to a file. 
+Last chapter, we learned about using the `tidyverse` `read_csv` function when reading files that match that function's expected defaults 
+(column names are present, and commas are used as the delimiter/separator between columns). In this section, we will learn how to read 
 files do not satisfy the default expectations of `read_csv`. 
 
 Before we jump into the cases where the data aren't in the expected default format for `tidyverse` and `read_csv`, let's revisit the simpler
@@ -101,7 +101,7 @@ case where the defaults hold and the only argument we need to give to the functi
 We put `data/` before the name of the file when we are loading the data set because this data set is located in a sub-folder, named `data`, 
 relative to where we are running our R code.
 
-Here is what the file would look in a plain text editor:
+Here is what the file would look like in a plain text editor:
 
 ```{bash, echo=FALSE, comment=NA}
 head -n 10 data/can_lang.csv
